--- a/public/css/style-pdf.css
+++ b/public/css/style-pdf.css
@@ -179,7 +179,7 @@ table {
 }
 
 table tr:nth-child(odd) td{
-    background-color: #f5f5f5 !important;
+    background-color: #faf9fc !important;
 }
 
 table th,
