Fixed bug with image sign in PDF, Fixed Bug With Email Templates
Former-commit-id: e42d3b4686a3b8cea96817d4bf530658f7870656 [formerly 45708321d6d2cdda0c1e1d5191be8931b9b965d7]
Former-commit-id: 4c5037a00088b02e24b2adf07fd2774fc256369d

--- a/public/css/style-pdf.css
+++ b/public/css/style-pdf.css
@@ -78,6 +78,16 @@
     clear: both;
 }
 
+.img-footer {
+    position: relative !important;
+    float: left !important;
+    width:  100%  !important;
+    height: auto  !important;
+    background-position: 50% 50%  !important;
+    background-repeat:   no-repeat  !important;
+    background-size:     cover  !important;
+}
+
 .page-break{
     page-break-after: always;
 }
@@ -85,6 +95,10 @@
 a {
     color: #0087C3;
     text-decoration: none;
+}
+
+.table-no-split {
+    page-break-inside: avoid !important;
 }
 
 .color-table{
