Modified add contracts manually view

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -17063,6 +17063,9 @@ blockquote {
     justify-content: center;
     align-items: center;
 }
+.table-contracts{
+    padding: 0.75rem 0.20rem !important;
+}
 .b-top {
     border-top: 1px solid #ececec;
 }
