--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -1,15 +1,143 @@
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
 
-.david{
-  color: #FFF000;
+/*** genetal styles ***/
+.m-body {
+    background-color: #f8f8fc !important;
 }
+.status-st {
+    font-weight: bold;
+    color: #fff; 
+    font-size: 9px;
+    border-radius: 10px;
+    padding: 5px 10px;
+    text-transform: uppercase;
+}
+.published {
+    background-color: #5fe2a0;
+}
+.incompleted {
+    background-color: #969cc0;
+}
+.expired {
+    background-color: #ff6464;
+}
+
+/**** --------- ****/
 
 .card {
   border: 2px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.50rem;
 }
+.card-title {
+    color: #031b4e;
+    font-weight: bold;
+}
+.btn-bg {
+    background-color: #006bf9 !important;
+    color: #fff;
+    font-weight: bold;
+    border: none !important;
+}
+.btn-bg:hover {
+    opacity: 0.8;
+}
+.btn-link {
+    font-weight: bold;
+}
+.form-control:focus {
+    box-shadow: none;
+}
+table thead {
+    background-color: transparent !important;
+    border-bottom: 1px solid #eee;
+}
+table tr th {
+    color: #031b4e;
+    font-weight: bold !important;
+}
+table tr td {
+    color: #031b4e;
+}
+table tr th:focus {
+    outline: none;
+}
+.form-inline {
+    position: relative;
+}
+.form-inline i {
+    position: absolute;
+    left: 12px;
+    color: #525f7e;
+}
+.form-inline input {
+    border: 2px solid #eee;
+    padding-left: 32px;
+}
+.input-check[type=checkbox] + label {
+  display: block;
+  margin: 0.2em;
+  cursor: pointer;
+  padding: 0.2em;
+}
 
-.bg-container {
-  background-color: #eceff3;
+.input-check[type=checkbox] {
+  display: none;
+}
+.input-check[type=checkbox] + label:before {
+  content: "\2714";
+  border: 0.15em solid #006bf9;
+  border-radius: 0.2em;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  width: 1.5em;
+  height: 1.5em;
+  padding-left: 0.15em;
+  margin-right: 0.15em;
+  color: transparent;
+  transition: .2s;
+  font-size: 16px;
+}
+.input-check[type=checkbox] + label:active:before {
+  transform: scale(0);
+}
+.input-check[type=checkbox]:checked + label:before {
+  color: #006bf9;
+}
+.input-check[type=checkbox]:disabled + label:before {
+  transform: scale(1);
+  border-color: #006bf9;
+}
+.input-check[type=checkbox]:checked:disabled + label:before {
+  transform: scale(1);
+  background-color: transparent;
+  border-color: #006bf9;
+}
+.btn.btn-secondary {
+    background-color: transparent!important;
+    border: 2px solid #eee !important;
+}
+.btn.btn-secondary:focus i {
+    color: #006bf9;
+}
+.action-app i {
+    color: #eee;
+}
+.btn-action {
+    width: 100%;
+    display: block;
+    text-align: right;
+    font-weight: bold;
+    font-size: 14px;
+    color: #525f7e;
+    border: none;
+    background: transparent;
+}
+.btn-action:hover {
+     text-decoration: underline;
+}
+
+.btn-action:nth-child(3) {
+    color:  #ff6464;
 }
