--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,9 @@
 // Font
 
-@font-face {
+/*@font-face {
   font-family: Sailec;
   src: url(../../../public/fonts/sailec.otf);
-}
+}*/
 
 // Variables
 @import "variables";
