--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -371,6 +371,12 @@ i.mx-icon-calendar {
     top: 25px;
     left: 11px;
 }
+#carrier .multiselect__tags {
+    height: auto;
+}
+.multiselect__placeholder {
+    margin-bottom: 0px !important;
+}
 
 
 /*** Validations ***/
