--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -208,6 +208,11 @@ td.checkbox-add-fcl, td.actions-add-fcl {
     z-index: 1;
 }
 
+.all-action-app {
+    position: absolute;
+    right: 30px;
+}
+
 .popup-actions[data-action="false"] {
     background: red;
 }
