--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -488,3 +488,11 @@ input.multiselect__input:focus {
 .th-max {
     max-width: 60px;
 }
+
+.multiselect__tags{ 
+    font-size: 12px !important;
+}
+
+.form-control {
+    font-size: 0.85rem;
+}
