--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: Sailec;
-  src: url(../../../public/fonts/sailec.otf);
+  src: url(../fonts/sailec.otf);
 }
 
 // Variables
