--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -496,3 +496,11 @@ input.multiselect__input:focus {
 .form-control {
     font-size: 0.85rem;
 }
+
+.col-pr-5{
+    padding-right: 5px !important;
+}
+
+.col-pl-5{
+    padding-left: 5px !important;
+}
