--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -5,8 +5,23 @@
 
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
-
-a,input,h1,h2,h3,h4,h5,h6,span,li,p,label,textarea,td,th,tr,.h6 {
+a,
+input,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+li,
+p,
+label,
+textarea,
+td,
+th,
+tr,
+.h6 {
     font-family: "Sailec" !important;
 }
 
@@ -15,20 +30,22 @@ a,input,h1,h2,h3,h4,h5,h6,span,li,p,label,textarea,td,th,tr,.h6 {
 }
 
 .multiselect__content-wrapper::-webkit-scrollbar-thumb {
-    background: #aaa; 
+    background: #aaa;
     border-radius: 10px;
 }
 
 .multiselect__content-wrapper::-webkit-scrollbar-thumb:hover {
-    background: #006bf9; 
+    background: #006bf9;
 }
 
 
 /*** genetal styles ***/
+
 .m-body {
     background-color: #f8f8fc !important;
     height: auto;
 }
+
 .btns-form-modal {
     padding: 25px 40px 25px 40px;
     position: absolute;
@@ -42,44 +59,60 @@ a,input,h1,h2,h3,h4,h5,h6,span,li,p,label,textarea,td,th,tr,.h6 {
     justify-content: flex-end;
     align-items: center;
 }
+
 .btns-form-modal button:nth-child(1) {
     background: transparent;
-    border:none;
+    border: none;
     color: #ff6464;
     margin-right: 15px;
 }
+
 .btns-form-modal button:nth-child(1):hover:not(:disabled) {
     color: #ff6464 !important;
 }
 
 .status-st {
-    color: #fff; 
+    color: #fff;
     font-size: 9px;
     border-radius: 10px;
     padding: 5px 10px;
     text-transform: uppercase;
 }
+
+.truncate {
+    max-width: 120px !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+}
+
 .publish {
     background-color: #5fe2a0;
 }
+
 .incomplete {
     background-color: #969cc0;
 }
+
 .expired {
     background-color: #ff6464;
 }
+
 .incomplete::before {
     content: 'incompleted';
     font-weight: bold;
 }
+
 .publish::before {
     content: 'published';
     font-weight: bold;
 }
+
 .expired::before {
     content: 'expired';
     font-weight: bold;
 }
+
 
 /**** --- Table Card--- ****/
 
@@ -87,51 +120,64 @@ a,input,h1,h2,h3,h4,h5,h6,span,li,p,label,textarea,td,th,tr,.h6 {
     border: 2px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.50rem;
 }
+
 .card-title {
     color: #031b4e;
     font-weight: bold;
 }
+
 .btn-bg {
     background-color: #006bf9 !important;
     color: #fff;
     font-weight: bold;
     border: none !important;
 }
+
 .btn-bg:hover {
     opacity: 0.8;
 }
+
 .btn-link {
     font-weight: bold;
 }
+
 .form-control:focus {
     box-shadow: none;
 }
+
 table thead {
     background-color: transparent !important;
     border-bottom: 1px solid #eee;
 }
+
 table tr th {
     color: #031b4e;
     font-weight: bold !important;
 }
+
 table tr td {
     color: #031b4e;
 }
+
 table tr th:focus {
     outline: none;
 }
+
 .form-inline {
     position: relative;
 }
+
 .form-inline i {
     position: absolute;
     left: 12px;
     color: #525f7e;
 }
+
 .form-inline input {
     border: 2px solid #eee;
     padding-left: 33px;
 }
+
 .custom-control-label::before,
 .custom-control-label::after,
 .custom-control-input {
@@ -140,10 +186,13 @@ table tr th:focus {
     border-width: 2px;
     border-color: #EEE;
 }
-.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before,
-.custom-checkbox .custom-control-input ~ .custom-control-label::before{
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before,
+.custom-checkbox .custom-control-input~.custom-control-label::before {
     box-shadow: none;
 }
+
+
 /*.input-check[type=checkbox] + label {
     //display: block;
     margin: 0.2em;
@@ -184,31 +233,41 @@ table tr th:focus {
     background-color: transparent;
     border-color: #006bf9;
 }*/
-td.checkbox-add-fcl, td.actions-add-fcl {
+
+td.checkbox-add-fcl,
+td.actions-add-fcl {
     width: 45px;
 }
+
 .btn.btn-secondary {
     background-color: transparent!important;
     border: 2px solid #eee !important;
 }
+
 .btn.btn-secondary:focus i {
     color: #006bf9;
 }
+
 .action-app {
     padding: 0.1rem 0.40rem;
 }
+
 .action-app i {
     color: #eee;
 }
-#actions-box[type=checkbox]:checked + .popup-actions  {
+
+#actions-box[type=checkbox]:checked+.popup-actions {
     display: inline-block;
 }
+
 .table-hover tbody tr:hover {
     background-color: transparent !important;
 }
+
 #actions-box {
     display: none;
 }
+
 .actions-box {
     padding: 5px;
     display: flex;
@@ -237,6 +296,7 @@ td.checkbox-add-fcl, td.actions-add-fcl {
 .actions-box:hover .icon-add-fcl {
     color: #006bf9;
 }
+
 .popup-actions {
     display: none;
     top: 30px;
@@ -248,9 +308,11 @@ td.checkbox-add-fcl, td.actions-add-fcl {
     position: absolute;
     z-index: 10;
 }
+
 .active {
     display: block;
 }
+
 .btn-action {
     width: 100%;
     display: block;
@@ -261,6 +323,7 @@ td.checkbox-add-fcl, td.actions-add-fcl {
     border: none;
     background: transparent;
 }
+
 .btn-action:hover {
     text-decoration: underline;
 }
@@ -270,76 +333,93 @@ td.checkbox-add-fcl, td.actions-add-fcl {
 }
 
 .btn-action:nth-child(3) {
-    color:  #ff6464;
+    color: #ff6464;
 }
 
 
 /**** Modal Add Contract ***/
+
 .modal-body {
     background-color: #f8f8fc !important;
 }
+
 .modal-footer button:nth-child(1) {
     border: none !important;
     color: #ff6464;
     font-weight: bold;
 }
+
 .modal-footer button:nth-child(2) {
     background-color: #006bf9 !important;
     border: none !important;
 }
+
 .add-fcl input {
     border-width: 2px;
 }
+
 .mx-datepicker-range {
     width: 100% !important;
 }
+
 .mx-input {
     padding-top: 6px !important;
     padding-bottom: 6px !important;
     padding-right: 6px !important;
     padding-left: 30px !important;
 }
+
 i.mx-icon-calendar {
     left: 8px;
     right: 0px;
 }
+
 .modal-input {
     padding-left: 15px !important;
     padding-right: 15px !important;
 }
+
 .modal-header h5 {
     font-weight: bold !important;
     color: #031b4e !important;
 }
-.multiselect__option--highlight, .multiselect__option--selected {
-    background-color: #dddddd  !important;
+
+.multiselect__option--highlight,
+.multiselect__option--selected {
+    background-color: #dddddd !important;
     color: #333333 !important;
 }
+
 .multiselect__tags {
     font-size: 13px !important;
     height: 33.5px;
     min-height: 33.5px !important;
     border: 2px solid #eee !important;
-    padding:  4px 40px 5px 10px !important;
+    padding: 4px 40px 5px 10px !important;
     border-radius: 0.25rem !important;
     height: auto !important;
 }
+
 .multiselect__tags-wrap {
     width: 100% !important;
 }
+
 .multiselect__option {
     font-size: 13px;
-    padding: 6px !important; 
+    padding: 6px !important;
     min-height: 30px !important;
 }
+
 .modal-input label {
     color: #626e8b;
     font-weight: medium;
 }
+
 .multiselect__select {
     right: 5px !important;
     top: 0px !important;
 }
+
 .multiselect__select::before {
     font-family: 'FontAwesome' !important;
     content: "\f107" !important;
@@ -348,51 +428,62 @@ i.mx-icon-calendar {
     color: #525f7f;
     top: 17% !important;
 }
+
 .multiselect__single {
     color: #626e8b;
     font-size: 14px !important;
 }
+
 .multiselect__content-wrapper {
     box-shadow: 0px 0px 13px 3px rgba(0, 0, 0, 0.1) !important;
     margin-top: 3px !important;
-    z-index: 100 !important; 
+    z-index: 100 !important;
     overflow-y: auto !important;
     overflow-x: hidden !important;
 }
+
 .multiselect__content {
     display: block !important;
 }
 
+
 /*** --- Tabs --- ***/
+
 .tabs ul {
     margin-bottom: -0.75rem !important;
 }
+
 .card-tabs {
     margin-top: 25px;
     background: transparent !important;
     border: none !important;
 }
+
 .card-tabs .card-header {
     border-width: 2px !important;
     background: transparent !important;
 }
+
 .nav-tabs .nav-link.active {
     background: transparent !important;
     border-color: #006bf9 !important;
     border-width: 4px !important;
     font-weight: bold !important;
 }
+
 .nav-tabs .nav-link {
     border: none;
     font-size: 16px;
     color: #031b4e !important;
 }
+
 .multiselect__placeholder {
     white-space: nowrap;
     margin-bottom: 0px !important;
     padding-top: 0px !important;
     padding-left: 3px;
 }
+
 .select-all {
     position: relative;
     top: 25px;
@@ -401,20 +492,25 @@ i.mx-icon-calendar {
 
 
 /*** Validations ***/
-.form-control.is-invalid:focus, .form-control.is-valid:focus {
+
+.form-control.is-invalid:focus,
+.form-control.is-valid:focus {
     box-shadow: none !important;
 }
 
+
 /*** --- REMARK --- ***/
+
 .remarks {
     min-height: 150px;
 }
+
 .update-remark {
     width: 30px;
     height: 30px;
     bottom: 3%;
     right: 2%;
-    border-radius: 100px; 
+    border-radius: 100px;
     background: #19c39b;
     display: flex;
     justify-content: center;
@@ -422,6 +518,7 @@ i.mx-icon-calendar {
     position: absolute;
     color: #fff;
 }
+
 .title-dropzone {
     font-weight: bold;
     color: #031b4e;
@@ -429,42 +526,53 @@ i.mx-icon-calendar {
     top: 15px;
     left: 35px;
 }
+
 .title-card {
     color: #031b4e;
 }
+
 #dropzone {
     border: none;
 }
-.no-padding .card-body{
+
+.no-padding .card-body {
     padding: 0px;
 }
+
 .reportrange-text {
     border: 2px solid #eee !important;
 }
+
 .vue-daterange-picker {
     width: 100%;
     white-space: nowrap;
 }
+
 input.multiselect__input {
     font-size: 13px;
     padding-left: 3px;
 }
+
 input.multiselect__input:focus {
     border: 0px;
     outline: none;
 }
+
 #id_name input {
     font-size: 13px;
     color: #35495e !important;
     border: 2px solid #eee !important;
 }
+
 #id_name input::placeholder {
     color: #adadad !important;
 }
+
 .form-group legend {
     font-size: 12px !important;
     color: #626e8b !important;
 }
+
 .multiselect__single {
     margin-bottom: 0px !important;
 }
@@ -482,14 +590,13 @@ input.multiselect__input:focus {
     .form-inline i {
         bottom: 16px;
     }
-
 }
 
 .th-max {
     max-width: 60px;
 }
 
-.multiselect__tags{ 
+.multiselect__tags {
     font-size: 12px !important;
 }
 
@@ -497,10 +604,10 @@ input.multiselect__input:focus {
     font-size: 0.85rem;
 }
 
-.col-pr-5{
+.col-pr-5 {
     padding-right: 5px !important;
 }
 
-.col-pl-5{
+.col-pl-5 {
     padding-left: 5px !important;
 }
