--- a/resources/assets/sass/custom_app.scss
+++ b/resources/assets/sass/custom_app.scss
@@ -26,7 +26,7 @@ tr,
 }
 
 .multiselect__content-wrapper::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
 }
 
 .multiselect__content-wrapper::-webkit-scrollbar-thumb {
@@ -35,6 +35,19 @@ tr,
 }
 
 .multiselect__content-wrapper::-webkit-scrollbar-thumb:hover {
+    background: #006bf9;
+}
+
+.tab-pane .card-body::-webkit-scrollbar {
+    height: 5px;
+}
+
+.tab-pane .card-body::-webkit-scrollbar-thumb {
+    background: #aaa;
+    border-radius: 10px;
+}
+
+.tab-pane .card-body::-webkit-scrollbar-thumb:hover {
     background: #006bf9;
 }
 
@@ -435,6 +448,7 @@ i.mx-icon-calendar {
 }
 
 .multiselect__content-wrapper {
+    max-height: 140px !important;
     box-shadow: 0px 0px 13px 3px rgba(0, 0, 0, 0.1) !important;
     margin-top: 3px !important;
     z-index: 100 !important;
@@ -610,4 +624,69 @@ input.multiselect__input:focus {
 
 .col-pl-5 {
     padding-left: 5px !important;
+}
+
+.tab-pane .card-body {
+    overflow-x: scroll;
+}
+.btn-adds {
+    right: 60px; 
+    position: fixed;
+}
+.dropzone.dz-started .dz-message {
+    width: 382px !important;
+    float: left !important;
+    display: block !important;
+    margin: 0px;
+}
+
+#dropzone {
+    height: 100% !important;
+}
+
+  #dropzone .dz-preview {
+    width: 160px;
+    height: 200px;
+    display: inline-block;
+    border-radius: 5px;
+  }
+ #dropzone .dz-preview .dz-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+  }
+  #dropzone .dz-preview .dz-image > div {
+    width: inherit;
+    height: inherit;
+    border-radius: 50%;
+    background-size: contain;
+  }
+  #dropzone .dz-preview .dz-image > img {
+    width: 100%;
+  }
+
+   #dropzone .dz-preview .dz-details {
+    color: white;
+    transition: opacity .2s linear;
+    text-align: center;
+    border-radius: 5px;
+  }
+  #dropzone .dz-success-mark, .dz-error-mark, .dz-remove {
+    display: none;
+  }
+  #dropzone .dz-remove {
+    border-radius: 5px !important;
+    padding: 5px !important;
+    margin-left: 0px !important;
+    right: 19%;
+  }
+
+.no-scroll .card-body {
+    overflow-x: inherit !important;
+}
+
+.pagination {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
